<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/rollEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/rolls_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberOfDiceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_dice"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfDiceEditText"
        app:layout_constraintStart_toStartOf="@+id/rollEditText" />

    <EditText
        android:id="@+id/numberOfDiceEditText"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/number_of_dice_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/numberOfDiceTextView"
        app:layout_constraintTop_toBottomOf="@+id/rollEditText" />

    <TextView
        android:id="@+id/numberOfSidesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_sides"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfSidesEditText"
        app:layout_constraintStart_toStartOf="@+id/rollEditText" />

    <EditText
        android:id="@+id/numberOfSidesEditText"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/number_of_sides_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/numberOfSidesTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberOfDiceEditText" />

    <TextView
        android:id="@+id/modifierTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifier"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/modifierEditText"
        app:layout_constraintStart_toStartOf="@+id/rollEditText" />

    <EditText
        android:id="@+id/modifierEditText"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/modifier_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/modifierTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberOfSidesEditText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        android:text="@string/save_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifierEditText" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/delete_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>